Closed Bug 1034908 Opened 10 years ago Closed 10 years ago

The unused 'scope' argument to ErrorCopier::ErrorCopier and js_CopyErrorObject should be removed

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jimb, Assigned: jimb)

Details

Attachments

(1 file)

Try push looks good.
Comment on attachment 8451309 [details] [diff] [review]
Remove the unused 'scope' argument to ErrorCopier::ErrorCopier and js_CopyErrorObject.

Review of attachment 8451309 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks. r=me with one tweak.

::: js/src/jscompartment.h
@@ +590,3 @@
>  
>    public:
> +    ErrorCopier(mozilla::Maybe<AutoCompartment> &ac)

Add 'explicit' here, please.
Attachment #8451309 - Flags: review?(jorendorff) → review+
Added requested 'explicit':
https://hg.mozilla.org/integration/mozilla-inbound/rev/4d02030db21b
Assignee: nobody → jimb
Status: NEW → ASSIGNED
Flags: in-testsuite-
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: