Bug 1034908: Remove the unused 'scope' argument to ErrorCopier::ErrorCopier and js_CopyErrorObject. r=jorendorff